--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -7,3 +7,15 @@
     justify-content: center;
     align-items: center;
 }
+#carousel-container.container-fluid{
+    width: 1100px;
+    height: 600px;
+}
+
+.carousel-item img{
+    width: 1100px;
+    height: 600px;
+}
+main{
+    background-color: rgb(161, 161, 161);
+}
