--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,6 +1,4 @@
-.img-fluid{
-    width: 100%;
-}
+
 
 #navbar{
     display: flex;
@@ -16,6 +14,16 @@
     width: 1100px;
     height: 600px;
 }
+
+#product-card.container-fluid{
+    width: 1100%;
+    height: 900px;
+}
 main{
     background-color: rgb(161, 161, 161);
+}
+
+footer{
+    display: flex;
+    justify-content: center;
 }
