--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,4 +1,6 @@
-
+*{
+    font-family:'Times New Roman', Times, serif;
+}
 
 #navbar{
     display: flex;
@@ -6,24 +8,45 @@
     align-items: center;
 }
 #carousel-container.container-fluid{
-    width: 1100px;
-    height: 600px;
+    width: 1400px;
+    height: 700px;
 }
 
 .carousel-item img{
-    width: 1100px;
-    height: 600px;
+    width: 1400px;
+    height: 700px;
+}
+img:hover{
+    transition: 1s ease;
+    transition-delay: 0.2;
+    transform: scale(1.02) ease; 
+    box-shadow: 1px 1px 10px rgb(255, 255, 255);
+}
+img:not(:hover){
+    transition: 1s;
 }
 
 #product-card.container-fluid{
     width: 1100%;
     height: 900px;
 }
+
+#user-form.container-fluid{
+    background-color: rgb(112, 112, 112);
+    width: 800px;
+}
+.form-control:hover{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    box-shadow: 1px 1px 20px rgb(0, 0, 0);
+}
 main{
     background-color: rgb(161, 161, 161);
+    padding: 60px;
 }
 
 footer{
     display: flex;
     justify-content: center;
+    
 }
